# voxels

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
.cache/clangd/index/: adjacency_matrix.hpp.08E398ACC0ADD3C8.idx  adl_pointer.hpp.299351FE9D84C206.idx  algorithm.hpp.AB7C9BF5B3E2B067.idx  android-ndk-r17.hpp.BD7DBFE1717BC35B.idx  any.hpp.22099B5A33B9B0D3.idx  attribute.h.61074DFD4D409364.idx  buffer.cpp.BFF8842CBE6BE082.idx  buffer.hpp.55103BC25227CD70.idx  cache.hpp.B3A0AA1902A207FB.idx  camera.hpp.7279EDDC5EC8F5EC.idx  component.hpp.260E5922495BC28D.idx  compressed_pair.hpp.668BED605C887C45.idx  config.h.076B1CF9259EBF3B.idx  container.hpp.F3C1C1BF9ADFF8C3.idx  context.c.1855354DC2E25F7D.idx  context.hpp.1CB4B21DCAFFFF25.idx  delegate.hpp.4918BAD9B9093AA4.idx  dense_map.hpp.5A715A1A21B10A1A.idx  dense_set.hpp.93764EAC1C1B453B.idx  dispatcher.hpp.BF982DF270ACD04C.idx  dot.hpp.EABF6436EE3F3531.idx  egl_context.c.F0D2F6552B740E74.idx  emitter.hpp.AE8130F3DF5564E4.idx  entity.hpp.21D2A578DF38652E.idx  entt.hpp.AE5C94109052815A.idx  enum.hpp.5E0048783EB394C5.idx  factory.hpp.A4D8CA7CC1798805.idx  family.hpp.2D1DB5275C8D5F85.idx  flow.hpp.76EFD857DEFAB336.idx  framework.hpp.A7014763E8F014F3.idx  fwd.hpp.06F5C257125F4313.idx  fwd.hpp.0C74AD27785236AE.idx  fwd.hpp.3BB22FC1AC7AE4C0.idx  fwd.hpp.881C8203D8029160.idx  fwd.hpp.9D61A4A2A9382C95.idx  fwd.hpp.9DC8C8DFFE170652.idx  (+108 more)
include/: entity.hpp  movement.hpp  render_systems.hpp  ui.hpp
include/voxel/: ray.hpp  svo.hpp  tracing.hpp
src/: main.cpp  movement.cpp  render_systems.cpp  ui.cpp
